--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,3 @@
-cabal.sandbox.config
-.cabal-sandbox/
-dist
-cabal-dev
-*.o
-*.hi
-*.chi
-*.chs.h
-.stack-work/
-stack.yaml.lock
+/.vscode/
+/cabal.project.*
+/dist-newstyle/
