--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -58,7 +58,7 @@ jobs:
           ghc-version: 9.4.4
           cabal-version: 3.8.1.0
 
-      - run: cabal configure --enable-tests --jobs --test-show-details direct
+      - run: cabal configure --enable-tests --flags pedantic --jobs --test-show-details direct
 
       - run: cat cabal.project.local
 
