--- a/cron.cabal
+++ b/cron.cabal
@@ -1,93 +1,93 @@
-cabal-version: 2.2
-
-Name:                cron
-Version:             0.7.0
-Description:
+cabal-version:      2.2
+name:               cron
+version:            0.7.0
+description:
   Cron data structure and Attoparsec parser. The idea is to embed it in larger
   systems which want to roll their own scheduled tasks in a format that people
   are used to.
-
   'System.Cron' is where all the interesting datatypes live. You will also find
   'scheduleMatches', which you can use to compare a time against a
   'CronSchedule' to see if an action needs to be performed.  System.Cron.Parser
   is where you will find the parsers `cronSchedule`, `crontabEntry` and
   `cronTab`. To parse individual schedules up to full crontab files.
 
-Synopsis:            Cron datatypes and Attoparsec parser
-Category:            Text, Parsing, System
-License:             MIT
-License-file:        LICENSE
-Author:              Michael Xavier <michael@michaelxavier.net>
-Copyright:           Copyright: (c) 2012-2014 Michael Xavier
-Maintainer:          Michael Xavier <michael@michaelxavier.net>
-Build-Type:          Simple
-Extra-Source-Files:
-  README.md
+synopsis:           Cron datatypes and Attoparsec parser
+category:           Text, Parsing, System
+license:            MIT
+license-file:       LICENSE
+author:             Michael Xavier <michael@michaelxavier.net>
+copyright:          Copyright: (c) 2012-2014 Michael Xavier
+maintainer:         Michael Xavier <michael@michaelxavier.net>
+build-type:         Simple
+extra-source-files:
   changelog
+  README.md
 
 flag pedantic
   default: False
-  manual: True
+  manual:  True
 
 common library
   default-language: Haskell2010
+
   if flag(pedantic)
     ghc-options: -Werror
 
 library
-  import: library
+  import:          library
+  exposed-modules:
+    System.Cron
+    System.Cron.Describe
+    System.Cron.Internal.Check
+    System.Cron.Internal.Describe.Descriptors
+    System.Cron.Internal.Describe.Options
+    System.Cron.Internal.Describe.Time
+    System.Cron.Internal.Describe.Types
+    System.Cron.Internal.Describe.Utils
+    System.Cron.Internal.Schedule
+    System.Cron.Parser
+    System.Cron.Schedule
+    System.Cron.Types
 
-  Exposed-modules:   System.Cron
-                   , System.Cron.Internal.Describe.Descriptors
-                   , System.Cron.Internal.Describe.Options
-                   , System.Cron.Internal.Describe.Time
-                   , System.Cron.Internal.Describe.Types
-                   , System.Cron.Internal.Describe.Utils
-                   , System.Cron.Internal.Check
-                   , System.Cron.Internal.Schedule
-                   , System.Cron.Describe
-                   , System.Cron.Parser
-                   , System.Cron.Schedule
-                   , System.Cron.Types
-  Hs-source-dirs:  src
+  hs-source-dirs:  src
   build-depends:
-    base >= 4.17 && < 4.18
-    , attoparsec >= 0.14.4 && < 0.15
-    , data-default-class >= 0.1.2 && < 0.2
-    , mtl >= 2.3.1 && < 2.4
-    , text >= 2.0.1 && < 2.1
-    , time >= 1.12.2 && < 1.13
+    , attoparsec >=0.14.4 && <0.15
+    , base >=4.17 && <4.18
+    , data-default-class >=0.1.2 && <0.2
+    , mtl >=2.3.1 && <2.4
+    , text >=2.0.1 && <2.1
+    , time >=1.12.2 && <1.13
 
-  ghc-options: -Wall
-
+  ghc-options:     -Wall
 
 test-suite test
-  import: library
+  import:         library
+  type:           exitcode-stdio-1.0
+  main-is:        Main.hs
+  hs-source-dirs: test
+  other-modules:
+    SpecHelper
+    System.Test.Cron
+    System.Test.Cron.Describe
+    System.Test.Cron.Internal.Schedule
+    System.Test.Cron.Parser
+    System.Test.Cron.Schedule
 
-  Type:           exitcode-stdio-1.0
-  Main-Is:        Main.hs
-  Hs-Source-Dirs: test
-  other-modules:    SpecHelper
-                  , System.Test.Cron
-                  , System.Test.Cron.Describe
-                  , System.Test.Cron.Parser
-                  , System.Test.Cron.Schedule
-                  , System.Test.Cron.Internal.Schedule
-  Build-Depends:    base
-                  , cron
-                  , tasty
-                  , tasty-hunit
-                  , tasty-hedgehog
-                  , hedgehog
-                  , attoparsec
-                  , text
-                  , time
-                  , transformers-compat
-                  , semigroups
+  build-depends:
+    , attoparsec
+    , base
+    , cron
+    , hedgehog
+    , semigroups
+    , tasty
+    , tasty-hedgehog
+    , tasty-hunit
+    , text
+    , time
+    , transformers-compat
 
-  ghc-options: -Wall -O2 -threaded -rtsopts -with-rtsopts=-N
-
+  ghc-options:    -Wall -O2 -threaded -rtsopts -with-rtsopts=-N
 
 source-repository head
-  Type:     git
-  Location: https://github.com/michaelxavier/cron
+  type:     git
+  location: https://github.com/michaelxavier/cron
